--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:14-jdk-alpine
-VOLUME /tmp
-COPY build/libs/es-web-analytics-*.jar /app/es-web-analytics.jar
+COPY build/lib /app/lib/
+COPY build/es-web-analytics-*-runner.jar /app/es-web-analytics.jar
 WORKDIR /app
 ENTRYPOINT exec java $JAVA_OPTS -jar /app/es-web-analytics.jar
