--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,11 @@ analytics.include-ip=false
 elasticsearch.config-file=config/elasticsearch.json
 elasticsearch.index.append-date=true
 monitoring.performance.enabled=true
-spring.jackson.default-property-inclusion=non_null
-spring.mvc.throw-exception-if-no-handler-found=true
+# Logging
+quarkus.log.console.format=[%d{HH:mm:ss.SSS}] %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.console.level=INFO
+quarkus.log.file.enable=true
+quarkus.log.file.format=[%d{yyyy-MM-dd HH:mm:ss}] %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.file.path=logs/main.log
+quarkus.log.file.rotation.file-suffix=.yyyy-MM-dd.zip
+quarkus.log.file.level=INFO
