--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,7 @@
+kotlinVersion=1.3.72
+quarkusPluginVersion=1.6.0.Final
+quarkusPlatformArtifactId=quarkus-universe-bom
+quarkusPlatformGroupId=io.quarkus
+quarkusPlatformVersion=1.6.0.Final
 elasticsearchVersion=7.2.1
 kotlin.code.style=official
