Quarkus Native migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ quarkus.log.file.format=[%d{yyyy-MM-dd HH:mm:ss}] %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.file.path=logs/main.log
 quarkus.log.file.rotation.file-suffix=.yyyy-MM-dd.zip
 quarkus.log.file.level=INFO
+# Native
+quarkus.native.additional-build-args=--allow-incomplete-classpath,-H:EnableURLProtocols=http\\,https,--enable-all-security-services
